...
                                        <rect key="frame" x="0.0" y="586" width="383" height="17"/>
                                        <items>
                                            <barButtonItem title="Log Time" id="FXj-6K-ONI" userLabel="toolbarButtonLogTime">
                                                <connections>
                                                    <action selector="actionToolbarAddTimeLog:" destination="BYZ-38-t0r" id="TvP-c1-tZO"/>
...
                                                <rect key="frame" x="0.0" y="0.0" width="375" height="30"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Activity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l3z-Ko-21p">
                                                        <rect key="frame" x="0.0" y="0.0" width="57" height="30"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JkN-kj-7Zh" userLabel="textEditActivity">
                                                        <rect key="frame" x="65" y="0.0" width="310" height="30"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="textEditActivity"/>
...
                                        <rect key="frame" x="0.0" y="325" width="375" height="30"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="From:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="thz-O3-Q5G" userLabel="From">
                                                <rect key="frame" x="0.0" y="0.0" width="44" height="30"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FWk-pr-bUN">
                                                <rect key="frame" x="52" y="0.0" width="323" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="dateTimeFrom"/>
                                                <state key="normal" title="dateTimeFrom">
                                                    <color key="titleColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        <rect key="frame" x="0.0" y="363" width="375" height="30"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Until:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WVR-cr-1Hg">
                                                <rect key="frame" x="0.0" y="0.0" width="40" height="30"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UYa-Xw-cgD">
                                                <rect key="frame" x="51" y="0.0" width="324" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="dateTimeUntil"/>
                                                <state key="normal" title="dateTimeUntil">
                                                    <color key="titleColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Time Log" id="PKF-rX-KmS">
                        <barButtonItem key="rightBarButtonItem" title="Save" id="tRq-AC-ILN">
                            <connections>
                                <action selector="actionAddTimeLog:" destination="wEc-tL-ERe" id="OdJ-ze-Vdv"/>
...
                    </view>
                    <navigationItem key="navigationItem" title="Title" id="ldu-v4-F3l">
                        <barButtonItem key="rightBarButtonItem" title="Set" id="oUY-2v-NzJ">
                            <connections>
                                <action selector="actionTappedUse:" destination="OYf-49-vJT" id="LQb-cr-vqN"/>
...
